# aula09_bootcamp

./: .gitignore  README.md  dados.parquet  etl.py  exemplo00.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  tenacity_exemplo.py  timer_decorator.py  utils_log.py
