[tool.poetry]
name = "aula09-bootcamp"
version = "0.1.0"
description = ""
authors = ["Gustavo Lourenco da Silva <gustavolsilva@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
pandera = "^0.20.4"
pandas = "^2.2.3"
fastparquet = "^2024.5.0"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
